Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-Aug-2010 Andrew Eddie
 # Fixed issue [#21536] admin/com_users: report view. Is this being used or worked on?

 3-Aug-2010 Jean-Marie Simonet
 $ Adding missing strings, deleting redundant ones for com_contact.
 $ Adding/normalizing some .sys.ini strings/values com_user, com_weblinks
 # [#21706] Modifying [#21159] to let cat have the same name/alias when not in same tree when save&copy
 #$ [#21712] Weblinks /menu-items params correction. Thanks Bill.
 # [#21694] Beez Templates xml files reference to language folder
 
03-Aug-2010 Andrew Eddie
 # Fixed issue [#21346] Error in loading order of JS scripts in components (g p).
 # Fixed issue [#21704] *Re-enabling Published state per default when creating new items (Jean-Marie Simonet).

02-Aug-2010 Andrew Eddie
 # Fixed issue [#21545] </optgroup> is not generated for menu items admin page (Franklin Tse, Omar Ramos).
 # Fixed issue [#21670] Implementing the ability to NOT translate label and description (Jean-Marie Simonet, Artyom Bisyarin).

 1-Aug-2010 Ron Severdia
^ [# 21368] Changed alignment of column items
^ Fixed CSS ordering for BlueStork (table styles out of place)
^ Separated out IE7 & IE8 CSS files (BlueStork)
^ Fixed module positions, chrome & overrides for Atomic
 
 1-Aug-2010 Jean-Marie Simonet
 # [#21646] Text fields do not accept html tags
 $ [#21636] home menu error string. Thanks Bill.
 # [#21673] Patch committed  (17913) without placing the image in the right folder
 
31-Jul-2010 Ian MacLennan
 # [#21588] Reverting commit that broke unit tests.
 
 31-Jul-2010 Jean-Marie Simonet
 # [#21653] Mod_login redirections
 # [#21576] Missing code when mod_rewrite is off. Thanks Cherif
 $ Correcting mod_login string value.
 
30-Jul-2010 Louis Landry